--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
 altair==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
@@ -11,6 +13,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
+decorator==5.1.1
 distro==1.9.0
 entrypoints==0.4
 extra-streamlit-components==0.1.70
@@ -19,11 +22,14 @@ favicon==0.7.0
 Flask==3.0.2
 Flask-Mail==0.9.1
 fonttools==4.49.0
-fsspec==2024.2.0
+frozenlist==1.4.1
+fsspec==2024.3.1
+gcsfs==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.42
 google-api-core==2.17.1
 google-auth==2.28.2
+google-auth-oauthlib==1.2.0
 google-cloud-core==2.4.1
 google-cloud-storage==2.16.0
 google-crc32c==1.5.0
@@ -48,7 +54,9 @@ MarkupSafe==2.1.5
 matplotlib==3.8.3
 mdurl==0.1.2
 more-itertools==10.2.0
+multidict==6.0.5
 numpy==1.26.4
+oauthlib==3.2.2
 openai==1.13.3
 packaging==23.2
 pandas==2.2.1
@@ -70,6 +78,7 @@ pytz==2024.1
 PyYAML==6.0.1
 referencing==0.33.0
 requests==2.31.0
+requests-oauthlib==1.4.0
 rich==13.7.0
 rpds-py==0.18.0
 rsa==4.9
@@ -105,4 +114,5 @@ urllib3==2.2.1
 validators==0.22.0
 watchdog==4.0.0
 Werkzeug==3.0.1
+yarl==1.9.4
 zipp==3.17.0
