--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ streamlit-faker==0.0.3
 streamlit-image-coordinates==0.1.6
 streamlit-keyup==0.2.3
 streamlit-option-menu==0.3.12
+streamlit-pagination==0.0.3
 streamlit-pills==0.3.0
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==2.5.5
